@@ -1,3 +1,12 @@
+Mon Jul 31 18:37:36 2000  Owen Taylor  <otaylor@redhat.com>
+
+	* gtk/gtkentry.c (entry_adjust_scroll): Fix problem where computation
+	was depending on widget->allocation instead of the width of text_area,
+	which was incorrect for subclasses like GtkSpinButton.
+
+	* gdk/gdkpango.c (gdk_draw_layout): Fix a couple of typos
+	with width == 1 tests that should be width == -1.
+
 Mon Jul 31 16:45:48 2000  Owen Taylor  <otaylor@redhat.com>
 
 	* gdk/gdkwindow.c (gdk_window_process_updates_internal): Replace broken, 
